# learn_cmake

./: README.md
a_helloworld/: CMakeLists.txt  main.cpp
b_hello_headers/: CMakeLists.txt
b_hello_headers/src/: main.cpp  math.cpp
c_hello_static_lib/: CMakeLists.txt
c_hello_static_lib/module_b/: lib_b.h
d_dynamic_lib/: CMakeLists.txt
d_dynamic_lib/main/: main.cpp
d_dynamic_lib/module_a/: lib_a.cpp  lib_a.h
d_dynamic_lib/module_b/: lib_b.cpp
e_subproject/: CMakeLists.txt  README.md
e_subproject/all_include/: dynamic_lib_3.hpp  static_lib_1.hpp
e_subproject/dynamic_lib_3/: CMakeLists.txt  dynamic_lib_3.cpp
e_subproject/exe/: CMakeLists.txt  main.cpp
e_subproject/header_only_lib_2/: CMakeLists.txt  header_only_lib_2.hpp
e_subproject/static_lib_1/: CMakeLists.txt  static_lib_1.cpp
f_cpp_standard/: CMakeLists.txt  main.cpp
